[package]
name = "walk_on_spheres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
eyre = "0.6.8"
image = "0.24.7"
minifb = "0.25.0"
nalgebra = "0.32.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
